# avelorn

./: .gitignore  README.md  meson.build
resources/: dungeon.kra  torch.kra  walls.kra
resources/levels/: 1.txt
src/: Debug.vala  Generator.vala  Map.vala  MapReader.vala  Player.vala  Room.vala  Sprite.vala  SpriteGenerator.vala  main.vala  meson.build
tests/: Generator.test.vala  SpriteGenerator.test.vala  meson.build  tests.vala
vapi/: sdl2.vapi
